--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="benchHammer" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/benchGirls.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -126,7 +126,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="mahiGirls" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/block.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -159,7 +159,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="liftGirls" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/liftGirls2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -192,7 +192,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="pressLegsGirls" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/legPressGirls.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -225,7 +225,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="lungesGirls" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода каждой ногой на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода каждой ногой по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/lungesGirls.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -260,7 +260,7 @@
                                     <div id="liftLegsGirls" class="exercise">
                                        <div  class="train__link lineAfterSpan"></div>
 
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/rumLiftGirls.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -299,7 +299,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="benchInclined" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 6 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 6 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/benchinclined2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -332,7 +332,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="bars" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/bars2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -366,7 +366,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="mahi" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/mahi2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -399,7 +399,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="lift" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8-12 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8-12 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/vertLift2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -432,7 +432,7 @@
                                     <div  class="train__link lineAfterSpan"></div>
 
                                     <div id="pressLegs" class="exercise">
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/pressLegs2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
@@ -466,7 +466,7 @@
                                     <div id="liftLegs" class="exercise">
                                        <div  class="train__link lineAfterSpan"></div>
 
-                                       <div class="block__text exercise__text">выполни три рабочих подхода на 8 повторений и внеси в таблицу</div>
+                                       <div class="block__text exercise__text">выполни три рабочих подхода по 8 повторений и внеси в таблицу</div>
                                        <div class="block__image ibg"><img src="./img/rumLift2.jpg" alt=""></div>
                                        <div class="exercise__row">
                                           <div class="exercise__column">
